syntax = "proto3";

package com.anastasia.trade;

import "proto/anastasia/trade/smart.proto";


message Instrument {

  anastasia.trade.Security security = 1;
  anastasia.trade.TimeFrame timeFrame = 2;

}

message PriceCandle {

  string dateTime = 1;
  double open = 2;
  double high = 3;
  double low = 4;
  double close = 5;
  int32 volume = 6;

}

message PriceCandleList {

  repeated PriceCandle priceCandles = 1;

}

message PricePoint {

  string dateTime = 1;
  double price = 2;

}

message PricePointList {

  repeated PricePoint pricePoints = 1;

}

message PriceLevel {

  double priceLevel = 1;
  repeated PricePoint touches = 2;

}

message PriceLevelList {

  repeated PriceLevel priceLevels = 1;

}

message PriceZone {

  double min = 1;
  double max = 2;
  double width = 3;

}

message PriceZoneList {

  repeated PriceZone priceZones = 1;

}